# RPC-Service-Manager

./: CMakeLists.txt  README.md  README_RPC.md  build_linux.sh  build_windows.bat
include/: project_version.h
proto/: rpc_protocol.proto
sql/: init_tables.sql
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  protocol.h  utils.h
src/registry/: CMakeLists.txt  main.cpp
src/rpc/: CMakeLists.txt  main_test.cpp  message_codec.cpp  message_codec.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  tcp_connection.cpp  tcp_connection.h
tests/: CMakeLists.txt
